--- a/index.css
+++ b/index.css
@@ -1,9 +1,15 @@
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 body .clear-float {
   clear: both;
+}
+
+body .container {
+  max-width: 1130px;
+  margin: 0 auto;
 }
 
 body header {
@@ -67,6 +73,95 @@ body nav .navbar li a {
   color: white;
   text-decoration: none;
   font-size: 18px;
+}
+
+body main #main-image {
+  max-width: 100%;
+  height: 400px;
+  background-image: url("./photo-1530810369064-40df824c4f36.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 100% 70%;
+  text-align: center;
+  color: white;
+  font-weight: bold;
+}
+
+body main #main-image h1 {
+  position: relative;
+  margin: 0;
+  top: 20%;
+  font-size: 3em;
+}
+
+body main #main-image p {
+  position: relative;
+  top: 20%;
+  font-size: 1.4em;
+  font-style: italic;
+}
+
+body main #main-image a {
+  color: white;
+  text-decoration: none;
+  position: relative;
+  top: 100px;
+  font-size: 1.1em;
+  padding: 12px 20px;
+  background: #F55145;
+}
+
+body main #main-image a:hover {
+  background: #DC483E;
+}
+
+body #categories {
+  padding: 40px 0 10px;
+  background: #efefef;
+  color: black;
+  display: table;
+  width: 100%;
+}
+
+body #categories .categories-list {
+  display: table-cell;
+  height: 100px;
+  width: 33%;
+  padding-left: 20px;
+}
+
+body #categories .categories-list h3 {
+  margin: 5px 5px 30px 5px;
+  position: relative;
+}
+
+body #categories .categories-list h3:after {
+  content: "";
+  height: 0px;
+  width: 50px;
+  position: absolute;
+  bottom: -8px;
+  left: 0;
+  margin-left: 0px;
+  border-bottom: 1px solid #F55145;
+}
+
+body #categories .categories-list ul {
+  padding: 0;
+  list-style-type: none;
+  margin: 5px;
+}
+
+body #categories .categories-list ul li {
+  margin-bottom: 5px;
+}
+
+body #categories .categories-list ul li i {
+  margin-right: 10px;
+}
+
+body #categories .categories-list p {
+  padding-right: 30px;
 }
 
 body footer {
