--- a/index.scss
+++ b/index.scss
@@ -1,7 +1,12 @@
 body {
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
     .clear-float {
         clear: both;
+    }
+    .container {
+        max-width: 1130px;
+        margin: 0 auto;
     }
     header {
         background: #F55145;
@@ -51,6 +56,84 @@ body {
                     text-decoration: none;
                     font-size: 18px;                    
                 }
+            }
+        }
+    }
+    main {
+        #main-image {
+            max-width: 100%;
+            height: 400px;
+            background-image: url('./photo-1530810369064-40df824c4f36.jpeg');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: 100% 70%;
+            text-align: center;
+            color: white;
+            font-weight: bold;
+            h1 {
+                position: relative;
+                margin: 0;
+                top: 20%;
+                font-size: 3em;
+            }
+            p {
+                position: relative;
+                top: 20%;
+                font-size: 1.4em;
+                font-style: italic;
+            }
+            a {
+                color: white;
+                text-decoration: none;
+                position: relative;
+                top: 100px;
+                font-size: 1.1em;
+                padding: 12px 20px;
+                background: #F55145;
+                &:hover {
+                    background: #DC483E;
+                }
+            }
+        }
+    }
+    #categories {
+        padding: 40px 0 10px;
+        background: #efefef;
+        color: black;
+        display: table;
+        width: 100%;
+        .categories-list {
+            display: table-cell;
+            height: 100px;
+            width: 33%;
+            padding-left: 20px;
+            h3 {
+                margin: 5px 5px 30px 5px;
+                position: relative;
+                &:after {
+                    content: "";
+                    height: 0px;
+                    width: 50px;
+                    position: absolute;
+                    bottom: -8px;
+                    left: 0;
+                    margin-left: 0px;
+                    border-bottom: 1px solid #F55145;
+                }
+            }
+            ul {
+                padding: 0;
+                list-style-type: none;
+                margin: 5px;
+                li {
+                    margin-bottom: 5px;
+                    i {
+                        margin-right: 10px;
+                    }
+                }
+            }
+            p {
+                padding-right: 30px;
             }
         }
     }
