assets file included

--- a/index.scss
+++ b/index.scss
@@ -63,7 +63,7 @@ body {
         #main-image {
             max-width: 100%;
             height: 400px;
-            background-image: url('./photo-1530810369064-40df824c4f36.jpeg');
+            background-image: url('./assets/main-picture.jpeg');
             background-repeat: no-repeat;
             background-size: cover;
             background-position: 100% 70%;
